# zkl-celestia-succinct-solana

./: .env  .gitignore  CELESTIA-SETUP.md  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.js
.cargo/: config.toml
public/circuits/: verification_key.json
public/docs/: integration-details.md
sp1-programs/zkl-file-verify/: .env  Cargo.toml  Makefile  README.md
sp1-programs/zkl-file-verify/scripts/: upload_to_succinct.sh
sp1-programs/zkl-file-verify/src/: main.rs
src/: App.svelte  app.css  cors-proxy.js  lib.rs  main.js  main.rs  vite-env.d.ts
src/lib/: CelestiaStatus.svelte  CelestiaTransactions.svelte  FileUpload.svelte  HelpPage.svelte  Inbox.svelte  MainContent.svelte  Navbar.svelte  PayloadPreview.svelte  RecipientSearch.svelte  SettingsModal.svelte  Sphere.svelte  UploadInterface.svelte  UploadSection.svelte  UserManagement.svelte  WalletConnection.svelte  ZkStatus.svelte  navigation.js
src/lib/services/: celestia.js  ipfs.js  solana.js  zk.js
src/lib/stores/: database.js  fileStore.js  inboxStore.js  themeStore.js  wallet.js
src/server/: celestia-api.cjs  celestia-api.js
