[package]
name = "zkl-file-verify"
version = "0.1.0"
edition = "2021"
authors = ["ZKL Team"]
description = "IPFS hash verification with Zero Knowledge Proofs"
readme = "README.md"
resolver = "2"

[lib]
name = "zkl_file_verify_lib"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "zkl-file-verify"
path = "src/main.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = [
    "sha2/std",
    "serde/std",
    "serde_json/std",
]
alloc = []

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[package.metadata.rust-analyzer]
rustc_private = true
cargo.buildScripts.enable = true 