[package]
name = "zkl-file-verify"
version = "0.1.0"
edition = "2021"
authors = ["ZKL Team"]
description = "IPFS hash verification with Zero Knowledge Proofs"
readme = "README.md"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = ["sha2/std"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[[bin]]
name = "zkl-file-verify"
path = "src/main.rs"

[package.metadata.rust-analyzer]
rustc_private = true 